<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_avatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:cropToPadding="true"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/avatar2" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_name_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
        app:layout_constraintTop_toTopOf="@+id/iv_avatar"
        app:layout_constraintEnd_toStartOf="@+id/tv_date"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            tools:text="@string/dummy_username_3"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_last_message"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            tools:text="@string/dummy_message"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"
            tools:ignore="MissingConstraints"
            android:textSize="14sp"
            android:alpha="0.7"
            android:lines="1"
            android:ellipsize="end"
            android:textColor="@color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/cl_name_message"
        app:layout_constraintTop_toBottomOf="@+id/cl_name_message"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/dummy_date"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginEnd="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>