<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:padding="10dp"
    android:theme="@style/ThemeOverlay.DemoApp.FullscreenContainer"
    tools:context=".view.activities.MessageListActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_loginuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/account_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:text="@string/dummy_user_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_loginuser"
        app:layout_constraintStart_toEndOf="@+id/iv_loginuser"
        app:layout_constraintTop_toTopOf="@+id/iv_loginuser" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_search_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/iv_loginuser"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="15dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rect_lightblue"
            app:layout_constraintRight_toRightOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_add"
            app:layout_constraintTop_toTopOf="@+id/tv_add"
            app:layout_constraintBottom_toBottomOf="@+id/tv_add"
            android:background="@drawable/bg_search"
            android:layout_marginEnd="15dp"
            android:textColor="@color/white"
            android:paddingHorizontal="15dp"
            android:textColorHint="@color/white"
            android:hint="@string/hint_search"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/ic_search"
            app:layout_constraintEnd_toEndOf="@+id/edt_search"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_favourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_favourites"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_search_panel"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favourites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:orientation="horizontal"
        app:reverseLayout="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/tv_favourites"
        tools:listitem="@layout/favourite_user_item"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_dummy_page_indicators"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/active_inactive_indicators"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/rv_favourites"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_messages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_dummy_page_indicators"
        android:layout_marginTop="10dp"
        tools:listitem="@layout/message_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="10"/>

</androidx.constraintlayout.widget.ConstraintLayout>